--- a/cmd/frontend/templates/change.gohtml
+++ b/cmd/frontend/templates/change.gohtml
@@ -5,6 +5,7 @@
 
         <div class="jumbotron">
             <h1><i class="fas fa-exchange-alt"></i> {{ .Change.GetName }}</h1>
+            <p class="lead"><span data-toggle="tooltip" data-placement="right" title="{{ .Change.GetNiceDate }}" data-livestamp="{{ .Change.CreatedAt.Unix }}"></span></p>
         </div>
 
         {{ template "flashes" . }}
