--- a/cmd/frontend/templates/includes/footer.gohtml
+++ b/cmd/frontend/templates/includes/footer.gohtml
@@ -7,6 +7,7 @@
                 All copyrights reserved to their respective owners.
                 <a href="/terms">Terms of Service</a>.
                 Version <a href="/commits">{{ .GetCommits }} Beta</a>.
+                All times UTC.
                 <br>
                 <a href="https://twitter.com/gamedb_online" target="_blank" rel="noopener"><i class="fab fa-twitter"></i> Twitter</a> -
                 <a href="https://www.patreon.com/jleagle" target="_blank" rel="noopener"><i class="fab fa-patreon"></i> Patreon</a> -
