Show account value

--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -179,6 +179,13 @@
                             </div>
                             <div class="col-sm-12 col-lg-4">
 
+                                <div class="card mb-3" data-link-tab="stats">
+                                    {{/*<h5 class="card-header">Value</h5>*/}}
+                                    <div class="card-body">
+                                        <h4 class="mb-0 text-danger">Value: {{ .Player.GameStats.All.GetTotalPrice }}</h4>
+                                    </div>
+                                </div>
+
                                 <div class="card mb-3">
                                     <h5 class="card-header">Aliases</h5>
                                     <div class="card-body">
