Hide password verdict

--- a/cmd/frontend/assets/sass/_settings.scss
+++ b/cmd/frontend/assets/sass/_settings.scss
@@ -12,6 +12,10 @@
             height: 38px;
             background: #fff;
         }
+
+        .password-verdict {
+            display: none;
+        }
     }
 }
 
