Add top sellers to home

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -99,14 +99,14 @@
                     <a class="card-footer" href="https://twitter.com/gamedb_online" target="_blank" rel="noopener">@gamedb_online</a>
                 </div>
             </div>
-            <div class="col-12 col-sm-6 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
 
                 <div class="card border-0 games mb-4">
                     <h5 class="card-header text-center">Top Games</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .TopGames }}
-                                <div class="col-6 col-sm-12">
+                                <div class="col-6 col-md-12">
                                     <a href="{{ .GetPath }}">
                                         <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
                                     </a>
@@ -118,14 +118,14 @@
                 </div>
 
             </div>
-            <div class="col-12 col-sm-6 col-xl-3">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
 
                 <div class="card border-0 games mb-4">
-                    <h5 class="card-header text-center">New Games</h5>
+                    <h5 class="card-header text-center">Top New Games</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .NewGames }}
-                                <div class="col-6 col-sm-12">
+                                <div class="col-6 col-md-12">
                                     <a href="{{ .GetPath }}">
                                         <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="{{ .GetName }}">
                                     </a>
@@ -137,7 +137,26 @@
                 </div>
 
             </div>
-            <div class="col-12 col-xl-6">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+
+                <div class="card border-0 games mb-4">
+                    <h5 class="card-header text-center">Top Sellers</h5>
+                    <div class="card-body p-0">
+                        <div class="row no-gutters">
+                            {{ range .TopSellers }}
+                                <div class="col-6 col-md-12">
+                                    <a href="{{ .Path }}">
+                                        <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .Image }}&output=webp&w=460&h=215&fit=cover" alt="{{ .Name }}">
+                                    </a>
+                                </div>
+                            {{ end }}
+                        </div>
+                    </div>
+                    <a class="card-footer text-center" href="/games/new-releases">More Releases</a>
+                </div>
+
+            </div>
+            <div class="col-12 col-md-12 col-lg-6">
 
                 <div class="card mb-4" id="players">
                     <div class="card-header">
@@ -169,6 +188,9 @@
                     </div>
                     <a class="card-footer" href="/players">More Players</a>
                 </div>
+
+            </div>
+            <div class="col-12 col-md-12 col-lg-6">
 
                 <div class="card mb-4" id="updated-players">
 
