Show achievement distribution

--- a/cmd/frontend/assets/sass/_app.scss
+++ b/cmd/frontend/assets/sass/_app.scss
@@ -28,6 +28,12 @@
         }
     }
 
+    #achievements{
+        #achievement-counts-chart {
+            height: 300px;
+        }
+    }
+
     #players {
 
         .player-chart {
