--- a/cmd/frontend/assets/sass/_player.scss
+++ b/cmd/frontend/assets/sass/_player.scss
@@ -1,5 +1,13 @@
 #player-page {
 
+    #achievements {
+        .ch-graph {
+            margin: 0;
+            padding: 0;
+            border: none;
+        }
+    }
+
     #jumbotron {
 
         img {
