--- a/cmd/frontend/assets/sass/_player.scss
+++ b/cmd/frontend/assets/sass/_player.scss
@@ -1,10 +1,25 @@
 #player-page {
 
     #achievements {
+
+        .ch-months {
+            margin-bottom: 0;
+        }
+
+        .ch-days{
+            margin-bottom: 0;
+        }
+
         .ch-graph {
-            margin: 0;
-            padding: 0;
+            margin-top: 0;
+            margin-bottom: 0;
+            padding-top: 0;
+            padding-bottom: 0;
             border: none;
+        }
+
+        .ch-legend {
+            padding-top: 0;
         }
     }
 
