--- a/cmd/frontend/templates/admin/webhooks.gohtml
+++ b/cmd/frontend/templates/admin/webhooks.gohtml
@@ -1,7 +1,7 @@
-{{define "patreon"}}
+{{define "webhooks"}}
     {{ template "header" . }}
 
-    <div class="container" id="admin-patreon-page">
+    <div class="container" id="admin-webhooks-page">
 
         {{ template "flashes" . }}
 
@@ -10,12 +10,13 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped table-counts" data-row-type="users" data-path="/admin/patreon.json">
+                    <table class="table table-hover table-striped table-counts" data-row-type="users" data-path="/admin/webhooks.json">
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Date</th>
+                            <th scope="col">Service</th>
                             <th scope="col">Event</th>
-                            <th scope="col">User</th>
+                            <th scope="col">Data</th>
                         </tr>
                         </thead>
                         <tbody>
