--- a/cmd/frontend/templates/includes/admin_header.gohtml
+++ b/cmd/frontend/templates/includes/admin_header.gohtml
@@ -36,10 +36,10 @@
             </li>
 
             <li class="nav-item">
-                {{if endsWith .Path "/patreon" }}
-                    <span class="nav-link active" role="tab">Patreon</span>
+                {{if endsWith .Path "/webhooks" }}
+                    <span class="nav-link active" role="tab">Webhooks</span>
                 {{else}}
-                    <a class="nav-link" href="/admin/patreon" role="tab">Patreon</a>
+                    <a class="nav-link" href="/admin/webhooks" role="tab">Webhooks</a>
                 {{end}}
             </li>
 
